aula-terraform/securitygroup.tf
resource "aws_security_group" "http_sg" {
  vpc_id = aws_vpc.sc_vpc.id
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "HTTP SG"
  }

  depends_on = [aws_vpc.sc_vpc]
}
